<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="url_android_service">http://182.74.251.115/wcftecGuard/TecSafer.svc</string>-->
    <!--<string name="url_android_service">http://182.74.251.115/WCFTecGuard/TecSafer.svc</string>-->
    <!-- <string name="url_android_service">http://wcfcoc.com/TecSafer.svc</string>-->

    <string name="url_WebPayment">https://www.m3fcoc.com</string>
    <string name="app_name">Family Care</string>
    <string name="wecomeFirst">Already A Member ? \n <u>Sign In</u></string>

    <string name="Main_lblcontrolroomcontact"><b><u>7017950013</u></b></string>
    <string name="continue_process">Searching ...</string>
    <string name="Main_lblConfirmSupport">Contact us at +94114327575</string>
    <string name="OTP_lblPreSMS"><b>Enter your valid Activation Code</b></string>

    <string name="CheckInternet">Check your connection and try again.</string>
    <string name="about_PhoneNo">+<u>(+91) 9452157180</u></string>
    <string name="about_PhoneNo_India"><u>(+91) 7054532079</u></string>
    <string name="about_Email">Customer Support:  <u>omdotmishra@gmail.com</u></string>
    <string name="about_Emailnew">Products and Services Info: <u>sankesarwani@gmail.com</u></string>
    <string name="about_EmailnewContectUs"><u>info@osoftec.com</u></string>
    <string name="hint_username">User Name</string>
    <string name="skype_support">Skype Support : om.mishra.</string>
    <string name="skype_support2">Skype Support : sandeep-kesarwani</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="order">Order No</string>
    <string name="items">Items</string>
    <string name="amount">Amount</string>
    <string name="subscription_amount">Subscription amount will deduct in your first ride.</string>

    <string name="hint_packagename">Package Name</string>
    <string name="hint_activation_code">Activation Code</string>

    <string name="Base_Fare">Base Fare</string>
    <string name="Distance">Distance</string>
    <string name="Extra_Distance">Extra Distance</string>
    <string name="Duration">Duration</string>
    <string name="Extra_Duration">Extra Duration</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Subscription">Subscription Amount</string>
    <string name="Service_Tax">Service Tax</string>
    <string name="Vat_Tax">Vat Tax</string>
    <string name="Cash">Cash</string>
    <string name="Extra_Distance_Amount">Extra Distance Amount</string>
    <string name="Extra_Duration_Amount">Extra Duration Amount</string>
    <string name="Package_Name">Package Name</string>
    <string name="Start_date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="ActivationCode">Activation Code</string>
    <string name="assigned_time">Assigned Time</string>

    <string name="passportNumber">Passport Number</string>
    <string name="edt_nicNumber">NIC Number</string>
    <string name="BloodGroup">Blood Group</string>
    <string name="crash_toast_text">App Crashed,Plz Send Crash Report</string>

    <string name="CARD_HOLDER_NAMECL">CARD HOLDER NAME</string>
    <string name="EXPIRY_MONTHCL">MM</string>
    <string name="EXPIRY_YEARCL">YY</string>
    <string name="Terms_and_Conditions"><a href="I have read and agree with the Terms and Conditions.">I have read and agree with the Terms and Conditions.</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate"> <u>Generate Referal Code</u></string>
    <string name="Add_Bank_Detail"><u>To receive payment provide bank details here.</u></string>

    <string name="UsWebsite_Url"><u>www.adectec.com</u></string>
    <string name="India_Website_Url"><u>www.osoftec.com</u></string>

    <string name="otp_hint">Please wait while we verify your mobile number.</string>
    <string name="otp_message">Enter OTP received through SMS.</string>
    <string name="about">About</string>
    <string name="title">Title : </string>
    <string name="menu_delete">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>

    <string name="admob_app_id"> </string>
    <string name="PlacesBanner"> </string>
    <string name="version">V - 6.09</string>
    <string name="shoping_sites">Shop Now</string>

    <!-- App identity -->
    <string name="tagline">Your family, our priority</string>

    <!-- Login screen -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue to your account</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="country_code">Country Code</string>
    <string name="india">India</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="try_demo">Try Demo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="password">Pin</string>

    <!-- UI titles and messages -->
    <string name="family_care_title">Family Care</string>
    <string name="home_title">Home</string>
    <string name="family_location_title">Family Location</string>
    <string name="manage_family_title">Manage Your Family</string>
    <string name="phone_book_post_title">Phone Book Post</string>
    <string name="my_diary_title">My Diary</string>
    <string name="profile_title">Profile</string>
    <string name="about_us_title">About Us</string>
    <string name="help_title">Help</string>
    <string name="settings_title">Settings</string>
    <string name="family_post_message_title">Family Post Message</string>
    <string name="scan_title">Scan</string>
    <string name="location_permission_required">Location permission is required for tracking</string>
    <string name="press_back_again_to_exit">Please click BACK again to exit</string>
    <string name="please_accept_terms">Please accept the terms to continue.</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_mobile">Enter valid mobile</string>
    <string name="min_2_characters">Min 2 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="internet_connection_failed">Internet connection failed!</string>
    <string name="enter_valid_mobile_and_pin">Enter valid mobile and pin!</string>
    <string name="please_enter_mobile_no">Please enter your mobile No.</string>
    <string name="please_enter_an_mobile_no">Please enter an mobile No.</string>

</resources>
