
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"

            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/margin_120dp"
                android:layout_height="@dimen/margin_120dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="Contact Us"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_13dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".1dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@color/colorPrimary"
                android:visibility="gone"></View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="Office Address"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_12dp"
                android:visibility="gone"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:visibility="gone"
                android:text="Optimization Software Technologies \n Plot No.37, First Floor, Sector-5 \n Rajendra Nagar,Sahibabad \n U.P. 201005 India"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/margin_13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Mobile :"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />

                <TextView
                    android:id="@+id/landlineno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/about_PhoneNo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>

            <!--================================================-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Website:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />

                <TextView
                    android:id="@+id/UsWebsite_Url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/UsWebsite_Url"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Mobile :"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />

                <TextView
                    android:id="@id/indiano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/about_PhoneNo_India"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>

            <!--=========================================-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Website:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />

                <TextView
                    android:id="@+id/India_Website_Url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/India_Website_Url"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Products and Services Info:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/serviceno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/about_Emailnew"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lblMobileNo"

                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/about_Email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_12dp" />

            <TextView
                android:id="@+id/skype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/skype_support"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_12dp" />

            <TextView
                android:id="@+id/skype2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email"
                android:layout_marginBottom="20dp"

                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/skype_support2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_12dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/theme_dark"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.80"
                android:background="@drawable/rectangular_white"
                android:gravity="center|left">

                <EditText
                    android:id="@+id/writeComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="Type your message here."
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/theme_dark"
                    android:textColorHint="@color/brown"
                    android:textSize="@dimen/head" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.20">

                <TextView
                    android:id="@+id/sendComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="40sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circular_bg"
                    android:backgroundTint="@color/green"
                    android:padding="10dp"
                    android:src="@drawable/sent_item"
                    android:tint="@color/white" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>
</LinearLayout>